tests/NormalTests/paczka1/fuzzy1/19305163.err
Error in line 4: kxclb A3m5 93,5
Error in line 9: kxclb A345 287,0
Error in line 18: OLm4T3HwM A345 98,2
Error in line 22: tldR S994 -4,1
Error in line 21: e0ju0hHDBnD S687 26,4
Error in line 14: tldR S994 65,5
Error in line 25: kxclb S994 1,2
Error in line 38: e0ju0hHDBnD S994 68,6
